JS-4320: fix loader in dark mode

--- a/src/scss/theme/dark/popup.scss
+++ b/src/scss/theme/dark/popup.scss
@@ -5,6 +5,7 @@
 
     .popup {
         .innerWrap { box-shadow: 0px 0px 0px 1px var(--color-bg-secondary); }
+		#loader { background: rgba(23, 23, 23, 0.5); }
     }
 
     /* PopupSettings */
